...
) {
    LazyVerticalGrid(
        columns = GridCells.Adaptive(160.dp),
        contentPadding = PaddingValues(16.dp),
        horizontalArrangement = Arrangement.spacedBy(16.dp),
        verticalArrangement = Arrangement.spacedBy(16.dp),
        modifier = modifier.testTag("OrderItemList")
    ) {
        items(orderItem) { data ->
            ShopItem(
                image = data.shopItem.image,
                title = data.shopItem.title,
                merk = data.shopItem.merk,
...
